# 42gg.match.server

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -task-템플릿.md  bug.yml  feature.yml  refactoring.yml  test.yml
.github/workflows/: main_merge_guard.yml
app/: main.py  pyproject.toml
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  evaluation.py  user.py
app/core/: config.py
app/exceptions/: custom_exceptions.py  handlers.py  http_exceptions.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  forty_two_api_service.py
app/utils/: http_client.py  jwt_token_provider.py
